fixing popup box, aligning it to the center and also the popup box font size change

--- a/src/components/maps.scss
+++ b/src/components/maps.scss
@@ -8,6 +8,11 @@
   }
 }
 
-.popup {
-  width: 50%;
+.mapboxgl-popup {
+  &-content {
+    width: 150px;
+  }
+  &-close-button {
+    font-size: 0.8rem;
+  }
 }
